--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -1,15 +1,15 @@
 body {
-    background-color: #F5F5F5;
-    margin : auto !important;;
+  background-color: #F5F5F5;
+  margin: auto !important;
 }
 
-#connexion{
-    background-color:#333;
-    width: 100%;
-    height: 70px;
+#connexion {
+  background-color: #333;
+  width: 100%;
+  height: 70px;
 }
 
-.form-login{
+.form-login {
   float: right;
   margin-right: 150px;
 }
@@ -24,7 +24,7 @@ body {
   padding-left: 5px;
 }
 
-#login-submit{
+#login-submit {
   font-weight: bold;
   cursor: default;
   border-width: 1px;
