--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -38,6 +38,87 @@ $topbar-background: #5AADBB;
   }
 }
 
+body {
+    background-color: #F5F5F5;
+    margin : auto !important;
+    font-family: Arial !important;
+    font-size: 12px;
+}
+
+.site-inner {
+  background-color: #F5F5F5;
+  margin-top: 2%;
+}
+
+#connexion{
+    background-color:#333;
+    width: 100%;
+    height: 70px;
+}
+
+.form-login{
+  float: right;
+  margin-right: 150px;
+    margin-top: 8px;
+}
+
+.login-form {
+  width: 200px;
+  height: 26px;
+  margin-top: 10px;
+  margin-right: 12px;
+  font-family: Arial !important;
+  font-size: 12px;
+  padding-left: 5px;
+  display: inline-block;
+}
+
+#login-submit{
+  font-weight: bold;
+  border-width: 1px;
+  border-style: solid;
+  width: 85px;
+  height: 26px;
+  margin-top: 5px;
+  font-family: Arial !important;
+  overflow: visible;
+  text-decoration: none !important;
+  text-align: center;
+  border-radius: 3px;
+  padding: 0 10px;
+  height: 26px;
+  line-height: 24px;
+  box-sizing: border-box;
+  font-size: 12px;
+  color: #444;
+  background-color: #f2f2f2;
+  border-color: #a7a7a7;
+}
+
+#register {
+  text-align: center;
+  width: 20%;
+  margin: auto;
+  padding: 15px 15px 15px 15px;
+  box-sizing: border-box;
+  font-size: 12px;
+  color: #444;
+  background-color: white;
+  border-color: #a7a7a7;
+  font-family: Arial !important;
+  overflow: visible;
+  text-decoration: none !important;
+  text-align: center;
+  border-radius: 3px;
+  font-weight: bold;
+  border-width: 1px;
+  border-style: solid;
+}
+
+.register-form {
+  height: 25px;
+  font-size: 12px;
+}
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
