--- a/src/app/views/profile.html
+++ b/src/app/views/profile.html
@@ -1,4 +1,6 @@
-{{ profile.data }}
+<div ng-if="undefined !== profile.current_user">
+	<login-form authenticated="profile.current_user"></login-form>
+</div>
 
 <div class="row">
 	<!-- //////////////// Main Profile //////////////////// -->
@@ -10,7 +12,9 @@
   				</div>
 		  	</div>
 		  	<div class="small-9 large-9 columns">
-		  		{{profile.data.public_name}}
+				<div class="flex-video">
+		        	<iframe width="420" height="315" src="//www.youtube.com/embed/HJ0onJKSITA" frameborder="0" allowfullscreen></iframe>
+				</div>
 		  	</div>
 		</div>
 	</div>
