se follow entre contacts, check profil des autres OK

--- a/src/app/views/profile.html
+++ b/src/app/views/profile.html
@@ -16,6 +16,15 @@
             </div>
             <!-- ///// MAIN PROFILE  /////////-->
             <div class="small-7 large-7 columns">
+                <div class="card">
+                    <div class="content" ng-if="!profile.isMine()">
+                        Follow this streamer!
+                        <button
+                            class="button"
+                            ng-click="profile.followUser()"
+                        >Follow</button>
+                    </div>
+                </div>
                 <div class="flex-video">
                     <iframe width="420" height="315" src="//www.youtube.com/embed/HJ0onJKSITA" frameborder="0" allowfullscreen></iframe>
                 </div>
@@ -27,15 +36,17 @@
             <div class="small-2 large-2 columns">
                 <div class="column">
                     <h5>Follows</h5>
-                    <div class="card">
-                        <div class="image">
-                            <img src="//placehold.it/300x300">
-                            <span class="title">
-                            <h5>{{profile.data.public_name}}<h5>
-                            </span>
+                    <div ng-repeat="contact_follow in profile.data.follow" class="card">
+                        <div class="content">
+                            {{contact_follow.public_name}}
                         </div>
-                        <div class="content" ng-if="profile.isMine()">
-                            CONTACT NAME
+                    </div>
+
+
+                    <h5>Followed by</h5>
+                    <div ng-repeat="contact_followed in profile.data.followed_by" class="card">
+                        <div class="content">
+                            {{contact_followed.public_name}}
                         </div>
                     </div>
                     <!-- <img src="//placehold.it/300x300" class="thumbnail" alt=""> -->
