--- a/src/app/directives/login-form/login-form.html
+++ b/src/app/directives/login-form/login-form.html
@@ -12,47 +12,47 @@
         </div>
     </div>
     <div class="top-bar-right">
-        <form ng-if="!login.current_user" novalidate class="form-inline">
-            <div class="row">
-                <div class="large-4 columns">
-                    <input type="text"
-                           ng-model="login.user.username"
-                           placeholder="Nom d'utilisateur"
-                           style="height: 30px;"
-                    >
-                </div>
-                <div class="large-4 columns">
-                    <input type="password"
-                           ng-model="login.user.password"
-                           placeholder="Mot de passe"
-                           style="height: 30px;"
-                    >
-                </div>
-                <div class="large-4 columns">
-                    <button role="button"
-                    aria-label="submit form"
-                    class="button"
-                    type="submit"
-                    ng-click="login.connexionUser()"
-                    >
-                      Connexion
-                    </button>
-                </div>
+        <div class="row">
+            <form ng-if="!login.current_user" novalidate class="form-inline">
+            <div class="large-4 columns">
+                <input type="text"
+                       ng-model="login.user.username"
+                       placeholder="Nom d'utilisateur"
+                       style="height: 30px;"
+                >
             </div>
-        </form>
-        <div ng-if="null !== login.current_user" class="row">
-            <div class="large-3 columns">
-                <h5>{{login.current_user.username}}</h5>
+            <div class="large-4 columns">
+                <input type="password"
+                       ng-model="login.user.password"
+                       placeholder="Mot de passe"
+                       style="height: 30px;"
+                >
             </div>
-            <div class="large-9 columns">
+            <div class="large-4 columns">
                 <button role="button"
                 aria-label="submit form"
-                class="button alert"
+                class="button"
                 type="submit"
-                ng-click="login.logoutCall()"
+                ng-click="login.connexionUser()"
                 >
-                  Disconnect
+                  Connexion
                 </button>
+            </div>
+            </form>
+            <div ng-if="null !== login.current_user" class="row">
+                <div class="large-3 columns">
+                    <button class="button success" ng-click="login.goHome()" aria-label="Home">{{login.current_user.username}}</button>
+                </div>
+                <div class="large-9 columns">
+                    <button role="button"
+                    aria-label="submit form"
+                    class="button alert"
+                    type="submit"
+                    ng-click="login.logoutCall()"
+                    >
+                      Disconnect
+                    </button>
+                </div>
             </div>
         </div>
     </div>
