--- a/src/app/views/informations.html
+++ b/src/app/views/informations.html
@@ -11,7 +11,7 @@
         </label>
     </div>
     <fieldset class="small-12 large-12 columns">
-        <legend>Choose Your Favorite</legend>
+        <legend>Choose your sex</legend>
         <input type="radio" name="sex" value="male" id="male" ng-model="info.data.sex"><label for="male">Male</label>
         <input type="radio" name="sex" value="female" id="female" ng-model="info.data.sex"><label for="female">Female</label>
     </fieldset>
