--- a/src/app/directives/user-infos/user-infos.html
+++ b/src/app/directives/user-infos/user-infos.html
@@ -17,7 +17,7 @@
     </div>
     <div class="action">
         ABOUT ME
-        <p>Registered since: {{info.data.created_at}}</p>
+        <p>Registered since: {{info.data.created_at | date:"dd/MM/yyyy"}}</p>
         <p>{{info.data.about_me}}</p>
     </div>
     <div class="action">
