--- a/src/app/views/profile.html
+++ b/src/app/views/profile.html
@@ -18,15 +18,18 @@
             <div class="small-7 large-7 columns">
                 <div class="callout clearfix" ng-if="!profile.isMine()">
                     <div class="content">
-                        <h5>Follow this streamer!</h5>
+                        <h5>Follow {{profile.user_infos.public_name}} !</h5>
                         <a
                             class="button float-right"
                             ng-click="profile.followUser()"
                         >Follow</a>
                     </div>
                 </div>
-                <div class="flex-video">
-                    <iframe width="420" height="315" src="//www.youtube.com/embed/HJ0onJKSITA" frameborder="0" allowfullscreen></iframe>
+                <div class="flex-video" ng-if="profile.streams">
+                  <iframe ng-src="{{profile.streams}}" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+                </div>
+                <div ng-if="!profile.streams">
+                  This user doesn't have a twitch account
                 </div>
                 <!-- ///////// POSTS ///////// -->
                 <div ng-if="profile.data">
@@ -53,6 +56,3 @@
                 </div>
             </div>
         </div>
-
-
-
