--- a/src/app/directives/display-posts/display-posts.html
+++ b/src/app/directives/display-posts/display-posts.html
@@ -1,20 +1,22 @@
-<form>
-    <div>
-        <label>
-            <input placeholder="Title" ng-model="posts.new_post.title">
-            <textarea placeholder="Post on profile" style="resize:none" ng-model="posts.new_post.content"></textarea>
-        </label>
-    </div>
-    <button role="button"
-            aria-label="Ajouter un post"
-            class="button alert"
-            type="submit"
-            ng-click="posts.submitPost()"
-            >
-        Poster sur le profil
-    </button>
-</form>
-<div class="card" ng-repeat="post in posts.data" >
+<div ng-if="posts.isMine()">
+    <form>
+        <div>
+            <label>
+                <input placeholder="Title" ng-model="posts.new_post.title">
+                <textarea placeholder="Post on profile" style="resize:none" ng-model="posts.new_post.content"></textarea>
+            </label>
+        </div>
+        <button role="button"
+                aria-label="Ajouter un post"
+                class="button alert"
+                type="submit"
+                ng-click="posts.submitPost()"
+                >
+            Poster sur le profil
+        </button>
+    </form>
+</div>
+<div class="card" ng-repeat="post in posts.data" style="margin-bottom: 10px;">
     <div class="content">
         <span class="title">{{ post.title }}</span>
         <p>{{ post.content }}</p>
@@ -24,5 +26,6 @@
         <a href='#'>Comments</a>
     </div>
 </div>
+</br>
 
 <h5>{{posts.error}}</h5>
