--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -18,6 +18,11 @@ $topbar-background: #5AADBB;
 // bower:scss
 // endbower
 
+.send {
+  position: relative;
+  float: right;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
