--- a/src/app/views/profile.html
+++ b/src/app/views/profile.html
@@ -33,7 +33,7 @@
                 </div>
                 <!-- ///////// POSTS ///////// -->
                 <div ng-if="profile.data">
-                    <display-posts currentuserid="profile.current_user.profile._id" profileid="profile.data._id" profileuserid="profile.data._id"></display-posts>
+                    <display-posts currentuserid="profile.current_user.profile._id" profileid="profile.data._id" ></display-posts>
                 </div>
             </div>
             <div class="small-2 large-2 columns">
