--- a/src/app/directives/display-posts/display-posts.html
+++ b/src/app/directives/display-posts/display-posts.html
@@ -20,8 +20,10 @@
         <p>{{ post.content }}</p>
         <p>From: {{ post.author }}</p>
     </div>
-    <div class="action">
-        <a href='#'>Comments</a>
+    <div ng-if="posts.data">
+        <div class="action">
+            <display-comments currentuserid="posts.current_user.profile._id" profileid="posts.profileid" postid="post._id"></display-comments>
+        </div>
     </div>
 </div>
 
