--- a/src/app/directives/display-posts/display-posts.html
+++ b/src/app/directives/display-posts/display-posts.html
@@ -24,7 +24,7 @@
     </div>
     <div ng-if="posts.data">
         <div class="action">
-            <display-comments currentuserid="posts.current_user.profile._id" profileid="posts.profileid" postid="post._id"></display-comments>
+            <display-comments currentuserid="posts.currentuserid" profileid="posts.profileid" postid="post._id"></display-comments>
         </div>
     </div>
 </div>
