--- a/src/app/directives/main-stream/main-stream.html
+++ b/src/app/directives/main-stream/main-stream.html
@@ -5,10 +5,14 @@
 	</h4>
 </div>
 
-<div ng-if="!stream.loading && !stream.twitch_online">
+<div ng-if="!stream.loading && !stream.twitch_online && !stream.hitbox_online">
 	<h4>This user is not live.</h4>
 </div>
 
 <div class="flex-video" ng-if="stream.twitch_online === true">
+        <iframe ng-src="{{stream.streams}}" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+</div>
+
+<div class="flex-video" ng-if="stream.hitbox_online === true">
         <iframe ng-src="{{stream.streams}}" frameborder="0" scrolling="no" height="378" width="620"></iframe>
 </div>
