--- a/src/app/views/informations.html
+++ b/src/app/views/informations.html
@@ -46,6 +46,12 @@
             <input type="text" ng-model="info.data.twitch_username">
         </label>
     </div>
+    <div class="small-12 large-12 columns">
+        <label>
+            Hitbox Username
+            <input type="text" ng-model="info.data.hitbox_username">
+        </label>
+    </div>
 
     <div class="small-12 large-12 columns">
         <button role="button"
