--- a/src/app/directives/display-posts/display-posts.html
+++ b/src/app/directives/display-posts/display-posts.html
@@ -18,9 +18,9 @@
 </div>
 <div class="card" ng-repeat="post in posts.data" style="margin-bottom: 10px;">
     <div class="content">
-        <span class="title">{{ post.title }}</span>
-        <p>{{ post.content }}</p>
-        <p>From: {{ post.author }}</p>
+        <p class="text-center">{{ post.title }}</p>
+        <h4>{{ post.content }}</h4>
+        <small>From: {{ post.author }}</small>
     </div>
     <div ng-if="posts.data">
         <div class="action">
