--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -5,12 +5,10 @@
 
 <div class="site-inner">
   <form novalidate id="register">
-    <p>Ne restez plus dans l'ombre.</br> Inscrivez vous, c'est gratuit.</p>
+    <p>Discover a new world of streaming.</br> Sign up, it's free.</p>
         <input class="register-form" type="text" class="form-control" id="login" ng-model="main.new_account.username" placeholder="Nom d'utilisateur">
         <input class="register-form" type="password" class="form-control" id="pwd2" ng-model="main.new_account.password" placeholder="Mot de passe">
-        <button id="login-submit" type="button" class="btn btn-primary" id ="btnco2" ng-click="main.registerUser()">Inscription</button>
-        {{main.new_account.username}}
-        {{main.new_account.password}}
+        <button id="login-submit" type="button" class="btn btn-primary" id ="btnco2" ng-click="main.registerUser()">Sign up</button>
   </form>
 </div>
 
