--- a/src/app/directives/login-form/login-form.html
+++ b/src/app/directives/login-form/login-form.html
@@ -2,11 +2,13 @@
     <div class="top-bar-left">
         <div class="row collapse postfix-round">
             <form>
-                <div class="small-9 columns">
+                <div class="small-9 columns" style="padding-right: 5px;">
                     <input type="text" ng-model="login.search_bar.query" placeholder="Search user">
                 </div>
                 <div class="small-3 columns">
-                    <button ng-click="login.goSearch()" class="button postfix" type="submit">Go</button>
+                    <button ng-click="login.goSearch()" type="submit">
+                      <img src="assets/images/search-3-xxl.png" id="img_search">
+                    </button>
                 </div>
             </form>
         </div>
@@ -28,31 +30,30 @@
                        style="height: 30px;"
                 >
             </div>
-            <div class="large-4 columns">
+            <div class="large-4 columns" style="padding-left: 0">
                 <button role="button"
                         aria-label="submit form"
-                        class="button"
                         type="submit"
                         ng-click="login.connexionUser()"
                 >
-                  Connexion
+                  <img src="assets/images/arrow-3-xxl.png" id="img_connection">
                 </button>
             </div>
             </form>
             <div ng-if="null !== login.current_user" class="row">
-                <button class="button success"
+                <button
                         ng-click="login.goHome()"
                         aria-label="Home"
                 >
-                    {{login.current_user.username}}
+                    <img src="assets/images/assistant-xxl.png" id="img_profile">
                 </button>
                 <button role="button"
                         aria-label="submit form"
-                        class="button alert"
+
                         type="submit"
                         ng-click="login.logoutCall()"
                 >
-                    Disconnect
+                    <img src="assets/images/power-xxl.png" id="img_deco">
                 </button>
             </div>
         </div>
