--- a/src/app/views/search.html
+++ b/src/app/views/search.html
@@ -5,7 +5,7 @@
 
 <div class="row">
     <!-- ///////// SEARCH BAR //////// -->
-    <div class="small-12 large-12 columns">
+    <div class="small-12 large-12 columns input_profil">
         <h5>Search a SeekStream user</h5>
         <div class="row">
             <div class="large-12 columns">
@@ -14,7 +14,9 @@
                   <input type="text" placeholder="Search public user" ng-model="search.new_query">
                 </div>
                 <div class="small-2 columns">
-                  <a class="button postfix" ng-click="search.querySearch(search.new_query)">Go</a>
+                  <a class="button postfix" ng-click="search.querySearch(search.new_query)" style="background-color:#FAFAFA">
+                    <img src="assets/images/149852.svg" style="width:30px;">
+                  </a>
                 </div>
               </div>
             </div>
