--- a/src/app/directives/login-form/login-form.html
+++ b/src/app/directives/login-form/login-form.html
@@ -2,7 +2,7 @@
     <div class="top-bar-left">
         <div class="row collapse postfix-round">
             <form>
-                <div class="small-9 columns" style="padding-right: 5px;">
+                <div ng-if='login.current_user' class="small-9 columns" style="padding-right: 5px;">
                     <input type="text" ng-model="login.search_bar.query" placeholder="Search user">
                 </div>
                 <div class="small-3 columns">
